==> Healeraaa/Ultrasonic/BSP/OLED.c <==
#include "main.h"
#include "OLED.h"
#include "delay.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_W_SCL(uint8_t BitValue)
{
	/*根据BitValue的值，将SCL置高电平或者低电平*/

	if (BitValue)
	{
		LL_GPIO_SetOutputPin(GPIOE, LL_GPIO_PIN_10);
	}
	else
	{
		LL_GPIO_ResetOutputPin(GPIOE, LL_GPIO_PIN_10);
	}

	/*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
	//...
	delay_us(1);
}

void OLED_W_SDA(uint8_t BitValue)
{
	/*根据BitValue的值，将SDA置高电平或者低电平*/
	if (BitValue)
	{
		LL_GPIO_SetOutputPin(GPIOE, LL_GPIO_PIN_8);
	}
	else
	{
		LL_GPIO_ResetOutputPin(GPIOE, LL_GPIO_PIN_8);
	}

	/*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
	//...
	delay_us(1);
}

void OLED_GPIO_Init(void)
{
	uint32_t i, j;

	/*在初始化前，加入适量延时，待OLED供电稳定*/
	for (i = 0; i < 1000; i++)
	{
		for (j = 0; j < 1000; j++)
			;
	}

	/*将SCL和SDA引脚初始化为开漏模式*/
	LL_GPIO_InitTypeDef GPIO_InitStruct = {0};

	/* GPIO Ports Clock Enable */
	LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOE);
	/**/
	LL_GPIO_ResetOutputPin(GPIOE, LL_GPIO_PIN_8 | LL_GPIO_PIN_10);

	/**/
	// GPIO_InitStruct.Pin = LL_GPIO_PIN_8 | LL_GPIO_PIN_10;
	// GPIO_InitStruct.Mode = LL_GPIO_MODE_OUTPUT;
	// GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
	// GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
	// GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
	// LL_GPIO_Init(GPIOE, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = LL_GPIO_PIN_8 | LL_GPIO_PIN_10;
	GPIO_InitStruct.Mode = LL_GPIO_MODE_OUTPUT;
	GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;
	GPIO_InitStruct.Pull = LL_GPIO_PULL_UP;
	LL_GPIO_Init(GPIOE, &GPIO_InitStruct);

	/*释放SCL和SDA*/
	OLED_W_SCL(1);
	OLED_W_SDA(1);
}
